<resources>
    <string name="app_name">آگهی نت</string>
    <string name="title_home">خانه</string>
    <string name="title_new_ad">آگهی جدید</string>
    <string name="title_chat">چت</string>
    <string name="title_user">کاربری</string>
    <string name="have_to_signin">برای استفاده از این بخش باید وارد حساب کاربری خود شوید</string>
    <string name="signin">ورود</string>
    <string name="signup">ثبت نام</string>
    <string name="email_field">ایمیل</string>
    <string name="password_filed">رمز عبور</string>
    <string name="doesnt_signup_yet">هنوز ثبت نام نکرده اید؟</string>
    <string name="goto_auth">وارد شدن به حساب کاربری</string>
    <string name="your_name">نام شما</string>
    <string name="phone_number">شماره تلفن</string>

    <string name="network_error">مشکل در اتصال به سرور آگهی نت !</string>
    <string name="no_network_error">لطفا از اتصال خود به اینترنت اطمینان حاصل کنید</string>

    <string name="bad_email">ایمیل نامعتبر/خالی</string>
    <string name="bad_password">رمز عبور نمی تواند خالی باشد</string>
    <string name="incorrect_creds">ایمیل یا رمزعبور اشتباه است</string>
    <string name="signin_ok">ورود با موفقیت انجام شد</string>

    <string name="bad_name">نام نمی تواند خالی باشد</string>
    <string name="bad_phone_number">شماره تلفن نمی تواند خالی باشد</string>
    <string name="duplicate_email">این ایمیل قبلا ثبت نام کرده است</string>
    <string name="signup_ok">ثبت نام با موفقیت انجام شد</string>
    <string name="filters">فیلترها</string>
    <string name="categories">دسته بندی ها</string>
    <string name="search_hint">جستجو...</string>

    <string name="no_result_for_this_search">متاسفانه برای جستجوی شما هیچ نتیجه ای وجود نداشت</string>

    <string name="choose_category">دسته بندی موردنظر را انتخاب کنید :</string>
    <string name="choose_cities">شهر های موردنظر را انتخاب کنید :</string>
    <string name="entire_iran">کل ایران</string>
    <string name="all_cities_of_iran">تمام شهر های ایران</string>
    <string name="all_categories">تمام دسته ها</string>
    <string name="select_all">انتخاب همه</string>
    <string name="deselect_all">حذف همه</string>
    <string name="select_at_least_one_city">حداقل یک شهر را باید انتخاب کنید!</string>
    <string name="min_greater_than_max_warning">مقدار شروع قیمت نمی تواند از مقدار بایانی بیشتر باشد!</string>
    <string name="retry">تلاش دوباره</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>