
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Screen content goes here. -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_ads"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@android:color/transparent"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/rv_ad"/>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.search.SearchBar
                android:id="@+id/searchBar"
                android:layoutDirection="rtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search_hint"
                android:hint="@string/search_hint"
                tools:ignore="ContentDescription">
            </com.google.android.material.search.SearchBar>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:scrollbars="none"
                android:fillViewport="true"
                android:overScrollMode="never"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_set_categories"
                        style="@style/Widget.Material3.Button.TonalButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginVertical="2dp"
                        android:paddingHorizontal="24dp"
                        android:text="@string/categories"
                        app:icon="@drawable/ic_category"
                        app:iconPadding="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_set_filters"
                        style="@style/Widget.Material3.Button.TonalButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="2dp"
                        android:paddingHorizontal="24dp"
                        android:text="@string/filters"
                        app:icon="@drawable/ic_filter_list"
                        app:iconPadding="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/button_set_categories"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_filters"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="4dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        tools:listitem="@layout/rv_filter"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="2"
                        android:overScrollMode="never"
                        app:layout_constraintBottom_toBottomOf="@+id/button_set_filters"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/button_set_filters"
                        app:layout_constraintTop_toTopOf="@+id/button_set_filters" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:layoutDirection="rtl"
        app:layout_anchor="@id/searchBar">

        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->


    </com.google.android.material.search.SearchView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>